[gd_scene load_steps=2 format=3 uid="uid://4sppyr854h2o"]

[ext_resource type="Script" uid="uid://cu1qqqribsvky" path="res://scenes/hero_viewer.gd" id="1_umjwi"]

[node name="HeroViewer" type="CanvasLayer"]
script = ExtResource("1_umjwi")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -71.5
offset_right = 20.0
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2

[node name="HeroNameLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Kael"

[node name="LevelLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="EquipLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="SkillLabel" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnLevelUp" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnClose" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnEquipTank" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnLevelUp" to="." method="_on_btn_level_up_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnClose" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/BtnEquipTank" to="." method="_on_btn_equip_tank_pressed"]
